fixed assignment repo tooltip to not show on smaller screens

--- a/styles/sections/education/Course.module.css
+++ b/styles/sections/education/Course.module.css
@@ -138,3 +138,9 @@
         width: 100%;
     }
 }
+
+@media (max-width: 680px) {
+    .tooltip {
+        display: none;
+    }
+}
